button and mod1 zip

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -1,5 +1,6 @@
 button,
 .button {
+    text-decoration: none;
     display: inline-block;
     background: #D6ECFF;
     border: 1px solid #f1f1f1;
