--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
     <div class="acknowledgement">
         <div class="container">
             <p>This teaching sequence has been developed by the <a href="http://www.gtac.edu.au/">Gene Technology Access Centre (GTAC)</a>, <a href="http://www.deakin.edu.au/">Deakin University</a> and <a href="http://www.unimelb.edu.au/">The University of Melbourne</a> thanks to the <a href="http://remstep.org.au/">Reconceptualising Mathematics and Science Teacher Education Programs (ReMSTEP)</a> project.</p>
-            <p>Published December 2016</p>
+            <p>Published early 2017</p>
         </div>
     </div>    
     <footer class="site-footer">
