--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
                     <li><a {% if parentL1 == "module-two" %}class="active"{% endif %} href="{{ site.baseurl }}/module-two/">Module 2</a></li>
                     <li><a {% if parentL1 == "module-three" %}class="active"{% endif %} href="{{ site.baseurl }}/module-three/">Module 3</a></li>
                     <li><a {% if parentL1 == "module-four" %}class="active"{% endif %} href="{{ site.baseurl }}/module-four/">Module 4</a></li>
-                    <li><a {% if parentL1 == "module-five" %}class="active"{% endif %} href="{{ site.baseurl }}/module-five/">Module 5</a></li>
+                    <li><a {% if parentL1 == "summative" %}class="active"{% endif %} href="{{ site.baseurl }}/summative/">Summative task</a></li>
                 </ul>
             </div>
         </nav>
