--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 {% include header.html %}
 <main>
-{{ content }}
+    <div class="container">
+        <h1>{{ page.title }}</h1>
+    </div>
+    {{ content }}
 </main>
+{% include_relative contributors.html %}
 {% include footer.html %}
