--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
                 <a href="http://www.gtac.edu.au/"><img src="http://www.gtac.edu.au/wp-content/uploads/2013/12/gtac.png" alt="GTAC"></a>
             </div>
             <div>
-                <a href="https://www.education.gov.au/"><img src="{{ site.baseurl }}/img/Dept-Education-and-Training_Stacked_Black.png"/></a>
+                <a href="https://www.education.gov.au/"><img src="{{ site.baseurl }}/img/Dept-Education-and-Training_Stacked_Black.png" alt="DET"/></a>
                 <p>Supported by the Australian Government Department of Education and Training</p>
             </div>
         </div>
